[tool.poetry]
name = "repl_python3_TwitchFollowerBot"
version = "0.1.0"
description = ""
authors = ["Plague <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
lxml = "^4.6.3"
aiohttp = "^3.7.4"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
